# EduMate

./: .dockerignore  .env.example  .gitignore  .replit  .vercelignore  API_DOCUMENTATION.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  FIREBASE_SETUP.md  README.md  Static Dashboard Overview.docx  Student Performance.pbix  Student Performance.xlsx  VERCEL_DEPLOY.md  docker-compose.yml  docker-entrypoint.sh  firebase-credentials-template.json  nginx.conf  package-lock.json  package.json  pyproject.toml  questions.json  replit.md  requirements.txt  seed_data.py  test_firebase_api.py  upload_questions.py  vercel.json
RAG/RAG model/: quiz_progress.json  quiz_report.html  recommendations.json  recommendations.txt
api/: index.py  requirements.txt
app/: auth.py  bkt_model.py  config.py  database.py  main.py  models.py
app/services/: question_generator.py  storage.py
frontend/: vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: Assessment.jsx  Dashboard.jsx  Home.jsx  PersonalizedPath.jsx  Quiz.jsx  Results.jsx  SubjectSelection.jsx  Subjects.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
tests/: test_api.py
